--- a/modules-02-non-module-code-splitting/package.json
+++ b/modules-02-non-module-code-splitting/package.json
@@ -2,9 +2,12 @@
   "name": "modules-02-non-module-code-splitting",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "build:dev": "webpack-dev-server",
+    "build:prod": "webpack --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +17,13 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "lodash": "^4.17.21"
   }
 }
